2013-12-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLCredential.m: ([-isEqual:]) needs to take the password
	and persistence into account, not just the username.

2013-11-29 Riccardo Mottola <rm@gnu.org>

	* Headers/ObjectiveC2/objc/runtime.h
	* Headers/Foundation/NSObjCRuntime.h
	Insert some kludge for PTR stuff on systems with fake C99
	compatible headers.

2013-11-26 Riccardo Mottola <rm@gnu.org>

	* Headers/GNUstepBase/GSConfig.h.in
	* configure.ac
	Detect broken PTR limits (notably solaris 8) and provide replacements

	* configure
	regenerated

2013-11-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUstepBase/GSConfig.h.in: temporarily redefine BOOL while
	including windows headers, so we don't get conflict between windows
	and objc booleans.
	* base.make.in:
	Add to CONFIG_SYSTEM_LIBS, CONFIG_SYSTEM_LIB_DIR, CONFIG_SYSTEM_INCL
	So that the libraries/headers used to build base are available for
	software using base.

2013-11-22 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m:
	Set errno to EAGAIN if TLS layer fails in a non-fatal way during
	read/write.
	Add more/better debug logging.

2013-11-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fix for bug 40620
	Prevent recursion while parsing process arguments.

2013-11-19  Saso Kiselkov <skiselkov>

	Releasing a GSTLSHandle (created from +[NSFileHandle sslClass]) after
	the TLS handshake will result in a segfault. Fix it.

2013-11-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/GNUstepBase/NSCalendarDate+GNUstepBase.m:
	* Source/Additions/NSCalendarDate+GNUstepBase.m:
	Add -isoYear method for compatibility with -weekOfYear

2013-11-07 Riccardo Mottola <rm@gnu.org>

	* Source/GSFormat.m
	* Source/NSException.m
	* Source/NSConnection.m
	Openbsd malloc.h warning fix.

2013-11-05 German Arias <germanandre@gmx.es>

	* Source/NSUndoManager.m (-undoActionName): Try first with the name
	of current group. If not, with the name of last object in undo stack.
