@@ -170,7 +170,7 @@ static SEL	objSel;
 }
 
 /* Designated initialiser */
-- (id) initWithObjects: (const id[])objs forKeys: (const id[])keys count: (NSUInteger)c
+- (id) initWithObjects: (const id[])objs forKeys: (const id <NSCopying>[])keys count: (NSUInteger)c
 {
   NSUInteger	i;
 
@@ -192,7 +192,7 @@ static SEL	objSel;
 		      format: @"Tried to init dictionary with nil value"];
 	}
 
-      node = GSIMapNodeForKey(&map, (GSIMapKey)keys[i]);
+      node = GSIMapNodeForKey(&map, (GSIMapKey)(id)keys[i]);
       if (node)
 	{
 	  IF_NO_GC(RETAIN(objs[i]));
@@ -201,7 +201,7 @@ static SEL	objSel;
 	}
       else
 	{
-	  GSIMapAddPair(&map, (GSIMapKey)keys[i], (GSIMapVal)objs[i]);
+	  GSIMapAddPair(&map, (GSIMapKey)(id)keys[i], (GSIMapVal)objs[i]);
 	}
     }
   return self;
